# roboparty_inference

./: .gitignore  CMakeLists.txt  package.xml
.github/workflows/: build-deb.yml
config/: robot.yaml
debian/: changelog  control  copyright  rules
include/: robot_interface.hpp
launch/: inference.launch.py
models/: policy_amp.onnx
robots/rpo/configs/: amp.yaml
src/: CMakeLists.txt  inference_node.cpp  inference_node.hpp  obs_manager.cpp  pybind_module.cpp  robot_interface.cpp  ros_interface.cpp
src/utils/: CMakeLists.txt  close_chain_mapping.cpp  close_chain_mapping.hpp  decouple_atom01.cpp  decouple_atom01.hpp  decouple_rpo.cpp  decouple_rpo.hpp  motion_loader.cpp  motion_loader.hpp  thread_pool.hpp
